@@ -275,7 +275,8 @@ url_db_from_package_sources <-
 function(dir, add = FALSE) {
     meta <- .read_description(file.path(dir, "DESCRIPTION"))
     db <- rbind(url_db_from_package_metadata(meta),
-                url_db_from_package_Rd_db(Rd_db(dir = dir)),
+                url_db_from_package_Rd_db(Rd_db(dir = dir, 
+                    stages = c("build", "install", "render"))),
                 url_db_from_package_citation(dir, meta),
                 url_db_from_package_news(dir))
     if(requireNamespace("xml2", quietly = TRUE)) {
